<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/Presentation.Theme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:popupTheme="@style/Presentation.Theme.PopupOverlay"
            app:title="@string/fragment_feature_company_saving_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        style="@style/Presentation.Widget.NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_22sdp"
            android:paddingRight="@dimen/_22sdp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_feature_owner_greetings_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/Presentation.TextAppearance.Title"
                    android:textSize="@dimen/_18sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fragment_feature_company_saving_greetings_message"
                    android:textAppearance="@style/Presentation.TextAppearance.Regular"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <uz.uzkassa.smartpos.core.presentation.widget.preference.PreferenceCategoryLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_category_title="@string/fragment_feature_company_saving_required_data_title"
                app:preference_category_title_tint="@android:color/black">

                <uz.uzkassa.smartpos.core.presentation.widget.chip.ChipEntryGroup
                    android:id="@+id/activity_type_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:chipSpacing="@dimen/_6sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_type_selection_button"
                    style="@style/Presentation.Widget.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:minHeight="0dp"
                    android:text="@string/fragment_feature_company_saving_activity_type_selection_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/owner_last_name_text_input_layout"
                    style="@style/Presentation.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/owner_last_name_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_feature_company_saving_surname_input_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textNoSuggestions" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/owner_first_name_text_input_layout"
                    style="@style/Presentation.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/owner_first_name_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_feature_company_saving_name_input_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textNoSuggestions" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:orientation="horizontal">

                    <com.tiper.MaterialSpinner
                        android:id="@+id/company_business_type_spinner"
                        style="@style/Presentation.Widget.MaterialSpinner.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_1sdp"
                        android:layout_weight="2"
                        android:hint="@string/fragment_feature_company_saving_company_business_type_hint"
                        app:errorEnabled="true"
                        app:hintEnabled="true" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_text_input_layout"
                        style="@style/Presentation.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:layout_weight="4"
                        app:errorEnabled="true"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fragment_feature_company_saving_company_name_input_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textNoSuggestions" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </uz.uzkassa.smartpos.core.presentation.widget.preference.PreferenceCategoryLayout>

            <uz.uzkassa.smartpos.core.presentation.widget.preference.PreferenceCategoryLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_category_title="@string/fragment_feature_company_saving_additional_title"
                app:preference_category_title_tint="@android:color/black">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <uz.uzkassa.smartpos.core.presentation.widget.materialtextfiled.MaterialTextField
                        android:id="@+id/region_selection_text_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:layout_marginEnd="@dimen/_1sdp"
                        android:layout_marginBottom="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:hint="@string/core_presentation_common_location_region" />

                    <uz.uzkassa.smartpos.core.presentation.widget.materialtextfiled.MaterialTextField
                        android:id="@+id/city_selection_text_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:layout_marginBottom="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:hint="@string/core_presentation_common_location_city" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_text_input_layout"
                    style="@style/Presentation.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_feature_company_saving_address_input_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textNoSuggestions" />

                </com.google.android.material.textfield.TextInputLayout>

                </uz.uzkassa.smartpos.core.presentation.widget.preference.PreferenceCategoryLayout>

            <uz.uzkassa.smartpos.core.presentation.widget.preference.PreferenceCategoryLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                app:preference_category_title="@string/fragment_feature_company_saving_vat_title"
                app:preference_category_title_tint="@android:color/black">

                <LinearLayout
                    android:id="@+id/company_vat_container_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_feature_company_saving_vat_percent_title"
                            android:textAppearance="@style/Presentation.TextAppearance.Title"
                            android:textSize="@dimen/_13sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/company_vat_percent_value_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Presentation.TextAppearance.Regular"
                            android:textSize="@dimen/_11sdp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/company_vat_enabled_switch_compat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:duplicateParentState="true"
                        android:focusable="false"
                        android:gravity="center" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/company_vat_change_button"
                    style="@style/Presentation.Widget.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:minHeight="0dp"
                    android:text="@string/fragment_feature_company_saving_vat_percent_change_button_title"
                    android:visibility="gone" />

            </uz.uzkassa.smartpos.core.presentation.widget.preference.PreferenceCategoryLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>